# Jose_Son_GeoAITest

./: README.md
task1/: README.md
task1/financial_report_documents/: financial_report_extractor_postman_collection.json
task1/financial_report_extractor/: .gitignore  Dockerfile  docker-compose.yml  requirements.txt
task1/financial_report_extractor/app/: config.py  main.py
task1/financial_report_extractor/app/adapters/: ai_processing_adapter.py  db_adapter.py  report_fetcher_adapter.py
task1/financial_report_extractor/app/core/: ai_prompts.py  schemas.py  use_cases.py
task1/financial_report_viewfinder/: package-lock.json  package.json  tailwind.config.js
task1/financial_report_viewfinder/src/: App.js  index.css
task1/financial_reports_extractor/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
task1/financial_reports_extractor/.github/workflows/: ci-cd.yml
task1/financial_reports_extractor/k8s/: deployment.yaml
task1/financial_reports_extractor/scripts/: quick_start.py  setup.py
task1/financial_reports_extractor/src/adapters/ai_agents/: finacial_extractor.py  validation_agent.py
task1/financial_reports_extractor/src/adapters/scraping/: intelling_scraper.py
task1/financial_reports_extractor/src/adapters/web/: dependencies.py  main.py  middleware.py  schemas.py
task1/financial_reports_extractor/src/application/: use_cases.py
task1/financial_reports_extractor/src/domain/: entities.py  ports.py  value_objects.py
task1/financial_reports_extractor/src/infrastructure/persistence/: models.py  repositories.py
task1/financial_reports_extractor/tests/e2e/: test_complete_flow.py
task1/financial_reports_extractor/tests/integration/: test_api.py  test_use_cases.py
task1/financial_reports_extractor/tests/unit/: test_doamin_entities.py
task2/: README.md
task2/image_classifier/: .gitignore  app.py  database.db  pdf_processor.py  requirements.txt
task2/image_classifier_documents/: image-classifier-api.postman_collection.json
task3/: README.md
task3/geospatial-cv/: Dockerfile  dev.sh  docker-compose.yml  geospatial.db  geospatial_jobs.db  main.py  requirements.txt
task3/geospatial-cv-documents/: GeoSpatial_CV-API_Postman_Collection.json
task3/geospatial-cv-front/: index.html
task3/geospatial-cv-results/: results.json
task3/geospatial-cv/app/: main.py  models.py  services.py
task3/geospatial-cv/models/: models.py
